Add the start time to the logfile output. Helps to show via the webapp interface, whether this is an old logfile.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@125727 13f79535-47bb-0310-9956-ffa450edef68

--- a/tools/forrestbot/core/build.xml
+++ b/tools/forrestbot/core/build.xml
@@ -42,8 +42,11 @@
     <trycatch property="errmsg" reference="exception">
       <try>
         <record name="${build.logfile}" action="start"/>
+        <tstamp>
+          <format property="time.start" pattern="yyyy-MM-dd hh:mm:ss"/>
+        </tstamp>
         <echo>
-          ....... Forrest render START
+          ....... Forrest render START ${time.start}
           ... Rendering docs in ${build.work-dir}
         </echo>
         <antcall target="site" inheritAll="false">
