Missing target for Gump
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@126215 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/build.xml
+++ b/main/build.xml
@@ -250,6 +250,10 @@
     description="Generates static HTML documentation">
     <ant antfile="${forrest.core}/forrest.build.xml" target="site"/>
   </target>
+  <target name="webapp" depends="dist-shbat"
+    description="Builds a cocoon webapp for local execution">
+    <ant antfile="${forrest.core}/forrest.build.xml" target="webapp"/>
+  </target>
 
   <!-- ================================== -->
   <!--        Test targets                -->
