Proper location for the build message about FORREST_HOME
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@126454 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/build.xml
+++ b/main/build.xml
@@ -325,7 +325,8 @@
   | Installation notice 
   *-----------------------------------------------------------------
   | You have now built the ${forrest.version} version of Forrest.
-  | Please set the environment variable FORREST_HOME to point to .
+  | Please set the environment variable FORREST_HOME to point to
+  |  ${forrest.home}
   | It is recommended to add
   |    unix: $FORREST_HOME/bin: to your $PATH
   |    win: %FORREST_HOME%\bin; to your %PATH%
