Fix build location pathname and example build message about FORREST_HOME. Suggested by: Andreas Kuckartz Fixes issue: FOR-428
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@126457 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs-author/content/xdocs/build.xml
+++ b/docs-author/content/xdocs/build.xml
@@ -59,16 +59,17 @@
    <section id="building">
      <title>Building and Installing Forrest</title>
      <p>
-       To build Forrest, change directory to '<code>forrest/forrestcore</code>', and
+       To build Forrest, change directory to '<code>forrest/main</code>', and
        then type '<code>build</code>' on Windows or '<code>./build.sh</code>' on
-       Unix. If everything is successful, you should see a message like this:
+       Unix. If everything is successful, you should see a message similar to:
      </p>
      <source>
   *-----------------------------------------------------------------
   | installation notice
   *-----------------------------------------------------------------
-  | You have built the distribution of Forrest.
-  | Please set the environment variable FORREST_HOME point to src/core
+  | You have built the X.Y-dev version of Forrest.
+  | Please set the environment variable FORREST_HOME point to
+  |  /svn/forrest
   | It is recommended to add
   |    unix: $FORREST_HOME/bin: to your $PATH
   |    win: %FORREST_HOME%\bin; to your %PATH%
@@ -82,12 +83,13 @@
        command is available everywhere:
      </p>
      <source>
-~/forrest/forrestcore$ export FORREST_HOME=`pwd`/src/core
-~/forrest/forrestcore$ export PATH=$PATH:$FORREST_HOME/bin
+[~]$ cd /path/to/svn/forrest
+[/svn/forrest]$ export FORREST_HOME=`pwd`
+[/svn/forrest]$ export PATH=$PATH:$FORREST_HOME/bin
      </source>
      <p>
        After updating the Forrest source from SVN if there have been certain types of
-       updates (to the Java source for xml-forrest.jar), you will have to build forrest again.
+       updates (to the Java source for xml-forrest.jar), you will need to build forrest again.
      </p>
     </section>
 
