Perhaps gump wants to build the "test" site.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@151141 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/build.xml
+++ b/main/build.xml
@@ -295,7 +295,7 @@
   <!-- ================================== -->
   <target  name="gump" description="Target used by Gump">
     <!--<antcall target="test"/>-->
-    <antcall target="site"/>
+    <antcall target="test"/>
     <antcall target="webapp"/>
   </target>
   
