Use the "jar" target for the main project used by Gump. Later add other projects to our gump descriptor to handle other build aspects, e.g. "test".
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@151281 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/build.xml
+++ b/main/build.xml
@@ -289,14 +289,14 @@
       <property name="project.home" value="${test.dir}"/>
     </ant>
   </target>
-  
-  <!-- ================================== -->
-  <!--        Target used by Gump         -->
-  <!-- ================================== -->
-  <target  name="gump" description="Target used by Gump">
-    <!--<antcall target="test"/>-->
-    <antcall target="test"/>
-    <antcall target="webapp"/>
+
+  <!-- ==================================================
+       Target used by Gump for the main "forrest" project.
+       Our gump descriptor also has other projects for other aspects of forrest build:
+       http://cvs.apache.org/viewcvs.cgi/gump/project/forrest.xml
+       ================================================== -->
+  <target  name="gump" description="Target used by Gump: forrest">
+    <antcall target="jar"/>
   </target>
   
   <!-- =================================================================== -->
