For the "test" target, re-arrange the build order so that it does "testseed" first and hence calls "init" at the start.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@151289 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/build.xml
+++ b/main/build.xml
@@ -257,7 +257,7 @@
   <!--        Test targets                -->
   <!-- ================================== -->
   <target name="test" 
-          depends="testPlugins, testseed" 
+          depends="testseed, testPlugins" 
           description="Test that the features are okay before committing."/>
   
   <target name="testPlugins"
