--- a/docs-author/content/xdocs/build.xml
+++ b/docs-author/content/xdocs/build.xml
@@ -61,7 +61,8 @@
      <p>
        To build Forrest, change directory to '<code>forrest/main</code>', and
        then type '<code>build</code>' on Windows or '<code>./build.sh</code>' on
-       Unix. If everything is successful, you should see a message similar to:
+       Unix. (Requires Java 1.4)
+       If everything is successful, you should see a message similar to:
      </p>
      <source>
   *-----------------------------------------------------------------
