Make it obvious that this is for 0.6 version.
git-svn-id: https://svn.apache.org/repos/asf/forrest/branches/forrest_06_branch@154245 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/documentation/content/xdocs/build.xml
+++ b/src/documentation/content/xdocs/build.xml
@@ -58,6 +58,11 @@
 
    <section id="building">
      <title>Building and Installing Forrest</title>
+<note>
+This document applies to the current 0.6 release version.
+See other instructions for the current development
+<link href="http://forrest.apache.org/docs/dev/build.html">0.7-dev</link> version.
+</note>
      <p>
        To build Forrest, type '<code>build</code>' on Windows, or '<code>./build.sh</code>' on
        Unix. If everything is successful, you should see a message like this:
