Make it obvious that this is for 0.7-dev
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@154249 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs-author/content/xdocs/build.xml
+++ b/docs-author/content/xdocs/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  Copyright 2002-2004 The Apache Software Foundation or its licensors,
+  Copyright 2002-2005 The Apache Software Foundation or its licensors,
   as applicable.
 
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -59,6 +59,11 @@
 
    <section id="building">
      <title>Building and Installing Forrest</title>
+<note>
+This document applies to the current development 0.7-dev version.
+See other instructions for the current
+<link href="http://forrest.apache.org/build.html">0.6 release</link> version.
+</note>
      <p>
        To build Forrest, change directory to '<code>forrest/main</code>', and
        then type '<code>build</code>' on Windows or '<code>./build.sh</code>' on
