delete the old plugin deployment before doing a local-deploy
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@154827 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/build.xml
+++ b/plugins/build.xml
@@ -107,10 +107,11 @@
     <delete dir="${plugins.dist-dir}"/>
   </target>
   
+  
   <!-- FIXME: Forrest should really use the plugins in-place if they are available as source -->
   <target name="local-deploy"
           description="Deploy a plugin locally"
-          depends="init, jar">
+          depends="init, jar, clean">
           
     <echo>Locally deploying ${plugin-name}</echo>
     
