--- a/main/webapp/default-forrest.properties
+++ b/main/webapp/default-forrest.properties
@@ -124,22 +124,31 @@ project.catalog=${project.schema-dir}/catalog.xcat
 
 # The URL to start crawling from
 project.start-uri=linkmap.html
+
 # Set logging level for messages printed to the console
 # (DEBUG, INFO, WARN, ERROR, FATAL_ERROR)
 project.debuglevel=ERROR
+
 # Max memory to allocate to Java
 forrest.maxmemory=64m
+
 # Any other arguments to pass to the JVM. For example, to run on an X-less
 # server, set to -Djava.awt.headless=true
 forrest.jvmargs=
+
 # The bugtracking URL - the issue number will be appended
 project.bugtracking-url=http://issues.apache.org/bugzilla/show_bug.cgi?id=
+
 #project.bugtracking-url=http://issues.apache.org/jira/browse/
 # The issues list as rss
 #project.issues-rss-url=
 project.i18n=false
+
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
 # Run "forrest available-plugins" for a list of plug-ins currently available
 project.required.plugins=org.apache.forrest.plugin.OpenOffice.org,simplified-docbook,wiki,org.apache.forrest.plugin.pdf-output
 
+# Proxy configuration
+# proxy.host=
+# proxy.port=
