--- a/plugins/build.xml
+++ b/plugins/build.xml
@@ -111,7 +111,7 @@
   <!-- FIXME: Forrest should really use the plugins in-place if they are available as source -->
   <target name="local-deploy"
           description="Deploy a plugin locally"
-          depends="init, jar, clean">
+          depends="init, clean, jar">
           
     <echo>Locally deploying ${plugin-name}</echo>
     
