Force downloading of requried plugins for seeded site to test plugin installation functionlaity
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@154851 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/build.xml
+++ b/main/build.xml
@@ -275,7 +275,7 @@
     <delete dir="${forrest.home}/build/plugins"/>
   </target>
 
-  <target name="testseed" depends="init">
+  <target name="testseed" depends="init, cleanPlugins">
     <property name="test.dir" value="${build.dir}/test"/>
     <delete dir="${test.dir}"/>
     <mkdir dir="${test.dir}"/>
