Added forrest.home to fresh-site property ( possibly only gump could care about this)
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@154909 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/build.xml
+++ b/main/build.xml
@@ -59,7 +59,7 @@
     <property name="tools.jar"             location="${java.home}/../lib/tools.jar"/>
     <available file="${tools.jar}"         property="tools.jar.present"/>
     
-    <property name="src-fresh-site"         location="main/fresh-site"/>
+    <property name="src-fresh-site"         location="${forrest.home}/main/fresh-site"/>
     
     <property name="forrestbot.dir"         location="${forrest.home}/tools/forrestbot"/>
 
