add additional testing (FOR-379)
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@155083 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/build.xml
+++ b/main/build.xml
@@ -263,10 +263,27 @@
   
   <target name="testPlugins"
           depends="cleanPlugins"
-          description="test each of the plugins">
-    <!-- FIXME: need to iterate over all plugins when testing -->
+          description="Test each type of the plugin">
+    
+    <echo>=============================</echo>
+    <echo>Testing using an input plugin</echo>
+    <echo>=============================</echo>
+    <ant antfile="${forrest.home}/plugins/org.apache.forrest.plugin.pdf-output/build.xml" target="test">
+      <property name="basedir" location="${forrest.home}/plugins/org.apache.forrest.plugin.excel"/>
+    </ant>
+    
+    <echo>=============================</echo>
+    <echo>Testing using an ouput plugin</echo>      
+    <echo>=============================</echo>
     <ant antfile="${forrest.home}/plugins/org.apache.forrest.plugin.pdf-output/build.xml" target="test">
       <property name="basedir" location="${forrest.home}/plugins/org.apache.forrest.plugin.pdf-output"/>
+    </ant>
+    
+    <echo>=============================</echo>
+    <echo>Testing using an internal plugin</echo>
+    <echo>=============================</echo>
+    <ant antfile="${forrest.home}/plugins/org.apache.forrest.plugin.pdf-output/build.xml" target="test">
+      <property name="basedir" location="${forrest.home}/plugins/IMSManifest"/>
     </ant>
   </target>
   
