--- a/plugins/org.apache.forrest.plugin.projectInfo/forrest.properties
+++ b/plugins/org.apache.forrest.plugin.projectInfo/forrest.properties
@@ -19,7 +19,7 @@
 ##############
 
 # Prints out a summary of Forrest settings for this project
-#forrest.echo=true 
+#forrest.echo=true
 
 # Project name (used to name .war file)
 #project.name=my-project
@@ -103,7 +103,7 @@
 #project.issues-rss-url=
 #I18n Property only works for the "forrest run" target.
 #project.i18n=true
-
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
-project.required.plugins=org.apache.forrest.plugin.projectInfo,IMSManifest,org.apache.forrest.plugin.pdf-output
+# Run "forrest available-plugins" for a list of plug-ins currently available
+project.required.plugins=org.apache.forrest.plugin.projectInfo,org.apache.forrest.plugin.projectInfo,org.apache.forrest.plugin.pdf-output
