added more templates and changed the default behaviour of the default forrest:view
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@157419 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/org.apache.forrest.plugin.fbits/forrest.properties
+++ b/plugins/org.apache.forrest.plugin.fbits/forrest.properties
@@ -45,9 +45,9 @@
 # project.content-dir if any other property using it is uncommented
 
 #project.status=status.xml
-#project.content-dir=src/documentation
+project.content-dir=src/documentation
 #project.raw-content-dir=${project.content-dir}/content
-#project.conf-dir=${project.content-dir}/conf
+project.conf-dir=${project.content-dir}/FORREST-INF
 #project.sitemap-dir=${project.content-dir}
 #project.xdocs-dir=${project.content-dir}/content/xdocs
 #project.resources-dir=${project.content-dir}/resources
