Require pod-output plugin.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@157524 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs-author/forrest.properties
+++ b/docs-author/forrest.properties
@@ -31,4 +31,4 @@ project.issues-rss-url=http://issues.cocoondev.org/IssueNavigator.jspa?pid=10000
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
 # Run "forrest available-plugins" for a list of plug-ins currently available
-project.required.plugins=org.apache.forrest.plugin.pdf-output,org.apache.forrest.plugin.projectInfo
+project.required.plugins=org.apache.forrest.plugin.pod-output,org.apache.forrest.plugin.pdf-output,org.apache.forrest.plugin.projectInfo
