typo spotted by Joachim Breitsprecher <jb@dserv.net>
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@157741 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/build.xml
+++ b/plugins/build.xml
@@ -71,7 +71,7 @@
     <property name="build.compiler.type"        value="classic"/>
     <property name="build.compiler.vm"          value="1.2"/>
     
-    <input message="Which plugin you which to operate on?"
+    <input message="Which plugin do you wish to operate on?"
            addproperty="plugin-name"/>
            
     <mkdir dir="${build.dir}"/>
