Seems that "catalogs" property is required. Add empty.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@158054 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/org.apache.forrest.plugin.projectInfo/src/documentation/classes/CatalogManager.properties
+++ b/plugins/org.apache.forrest.plugin.projectInfo/src/documentation/classes/CatalogManager.properties
@@ -47,6 +47,8 @@ verbosity=1
 # pathname separator is always semi-colon (;) regardless of operating system
 # directory separator is always slash (/) regardless of operating system
 #catalogs=../resources/schema/catalog.xcat
+catalogs=
+catalogs=
 
 # relative-catalogs
 # If false, relative catalog URIs are made absolute with respect to the
