added support for css. Each contract saves his own css. To discuss how to store non-contract specific css. I implemended the css-support inline maybe in the future it a good idea to link the css.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@158598 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/org.apache.forrest.plugin.fbits/forrest.properties
+++ b/plugins/org.apache.forrest.plugin.fbits/forrest.properties
@@ -26,7 +26,7 @@
 
 # Specifies name of Forrest skin to use
 #project.skin=tigris
-#project.skin=pelt
+project.skin=leather
 
 # comma separated list, file:// is supported
 #forrest.skins.descriptors=http://forrest.apache.org/skins/skins.xml,file:///c:/myskins/skins.xml
@@ -106,4 +106,4 @@ project.conf-dir=${project.content-dir}/FORREST-INF
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
 # Run "forrest available-plugins" for a list of plug-ins currently available
-project.required.plugins=org.apache.forrest.plugin.projectInfo,org.apache.forrest.plugin.fbits
+project.required.plugins=org.apache.forrest.plugin.projectInfo,org.apache.forrest.plugin.fbits,org.apache.forrest.plugin.pdf-output
