--- a/plugins/org.apache.forrest.plugin.fbits/forrest.properties
+++ b/plugins/org.apache.forrest.plugin.fbits/forrest.properties
@@ -26,7 +26,7 @@
 
 # Specifies name of Forrest skin to use
 #project.skin=tigris
-project.skin=leather
+project.skin=leather-dev
 
 # comma separated list, file:// is supported
 #forrest.skins.descriptors=http://forrest.apache.org/skins/skins.xml,file:///c:/myskins/skins.xml
