-allow FORREST_HOME to be set by another plugin (some plugins need a specific version of Forrest)\n-pass forrest.plugins property value to servlet startup -separated jetty server starting into a separate class (first phae of allowing support of different servlet engines)
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@158980 13f79535-47bb-0310-9956-ffa450edef68

--- a/tools/eclipse/plugin.xml
+++ b/tools/eclipse/plugin.xml
@@ -30,12 +30,6 @@
       <library name="lib/log4j-1.2.9.jar">
          <export name="*"/>
       </library>
-      <library name="lib/jetty-4.2.19.jar">
-         <export name="*"/>
-      </library>
-      <library name="lib/servlet-2.3.jar">
-         <export name="*"/>
-      </library>
    </runtime>
    <requires>
       <import plugin="org.apache.ant"/>
@@ -50,6 +44,7 @@
       <import plugin="org.eclipse.ui.ide"/>
       <import plugin="org.eclipse.webbrowser"/>
       <import plugin="org.eclipse.debug.ui"/>
+      <import plugin="org.burrokeet.servletEngine"/>
    </requires>
 
 
