--- a/plugins/org.apache.forrest.plugin.views/forrest.properties
+++ b/plugins/org.apache.forrest.plugin.views/forrest.properties
@@ -44,7 +44,7 @@ project.skin=leather-dev
 # Parent properties must be set. This usually means uncommenting
 # project.content-dir if any other property using it is uncommented
 
-#project.status=status.xml
+project.status=status.xml
 #project.content-dir=src/documentation
 #project.raw-content-dir=${project.content-dir}/content
 #project.conf-dir=${project.content-dir}/conf
@@ -106,4 +106,4 @@ project.skin=leather-dev
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
 # Run "forrest available-plugins" for a list of plug-ins currently available
-project.required.plugins=org.apache.forrest.plugin.views,org.apache.forrest.plugin.projectInfo,org.apache.forrest.plugin.pdf-output
+project.required.plugins=org.apache.forrest.plugin.projectInfo,org.apache.forrest.plugin.pdf-output,org.apache.forrest.plugin.views
