Fix some broken site: and ext: links (relics of the documentation split).
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@159761 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs-author/content/xdocs/build.xml
+++ b/docs-author/content/xdocs/build.xml
@@ -51,7 +51,7 @@
       <section id="snapshot">
         <title>Using source snapshots</title>
         <p>It is preferable to use SVN, but if you cannot for some reason, then
-          <link href="site:download">source snapshots</link> are available
+          <link href="ext:forrest/download">source snapshots</link> are available
           (automatically packed every six hours).
         </p>
       </section>
