--- a/plugins/build.xml
+++ b/plugins/build.xml
@@ -71,7 +71,7 @@
     <property name="build.compiler.type"        value="classic"/>
     <property name="build.compiler.vm"          value="1.2"/>
     
-    <input message="Which plugin do you wish to operate on?"
+    <input message="Which plugin do you wish to operate on (plugin-name)?"
            addproperty="plugin-name"/>
            
     <mkdir dir="${build.dir}"/>
