Better message for user input plugin-type.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@159899 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/build.xml
+++ b/plugins/build.xml
@@ -226,7 +226,7 @@
       </filterset>
     </copy>
     
-    <input message="What type of plugin do you wish to create (input, output, internal)?"
+    <input message="What type of plugin do you wish to create? "
            validargs="input,output,internal"
            addproperty="plugin-type"/>
     <move file="${plugin-name}/sitemap.xmap"
