--- a/plugins/org.apache.forrest.plugin.leather/forrest.properties
+++ b/plugins/org.apache.forrest.plugin.leather/forrest.properties
@@ -26,7 +26,7 @@
 
 # Specifies name of Forrest skin to use
 #project.skin=tigris
-#project.skin=pelt
+project.skin=pelt
 
 # comma separated list, file:// is supported
 #forrest.skins.descriptors=http://forrest.apache.org/skins/skins.xml,file:///c:/myskins/skins.xml
@@ -106,4 +106,4 @@
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
 # Run "forrest available-plugins" for a list of plug-ins currently available
-project.required.plugins=org.apache.forrest.plugin.leather,org.apache.forrest.plugin.projectInfo,org.apache.forrest.plugin.pdf-output
+project.required.plugins=org.apache.forrest.plugins.view,org.apache.forrest.plugins.leather,org.apache.forrest.plugin.projectInfo,org.apache.forrest.plugin.pdf-output
