Renamed leather to viewHelper. Cleaned the view plugin from not needed code. added documentation to both plugins.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@160651 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/org.apache.forrest.plugin.viewHelper/build.xml
+++ b/plugins/org.apache.forrest.plugin.viewHelper/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
-  Copyright 2002-2004 The Apache Software Foundation or its licensors,
+  Copyright 2002-2005 The Apache Software Foundation or its licensors,
   as applicable.
 
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -17,10 +17,10 @@
 -->
 <project default="docs" basedir="." name="Forrest plugin build file">
 
-  <property name="plugin-name" value="org.apache.forrest.plugin.leather"/>
+  <property name="plugin-name" value="org.apache.forrest.plugin.viewHelper"/>
 
   <import file="../build.xml"/>
-  
+
   <!-- Add any additional installation work here in the build target, for example:
   <target name="build"
           description="Extract the tools">
