--- a/plugins/org.apache.forrest.plugin.view/forrest.properties
+++ b/plugins/org.apache.forrest.plugin.view/forrest.properties
@@ -107,4 +107,4 @@
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
 # Run "forrest available-plugins" for a list of plug-ins currently available
-project.required.plugins=org.apache.forrest.plugin.view,org.apache.forrest.plugin.leather,org.apache.forrest.plugin.projectInfo,org.apache.forrest.plugin.pdf-output
+project.required.plugins=org.apache.forrest.plugin.view,org.apache.forrest.plugin.viewHelper,org.apache.forrest.plugin.projectInfo,org.apache.forrest.plugin.pdf-output
