--- a/plugins/org.apache.forrest.plugin.viewHelper/forrest.properties
+++ b/plugins/org.apache.forrest.plugin.viewHelper/forrest.properties
@@ -1,4 +1,4 @@
-# Copyright 2002-2004 The Apache Software Foundation or its licensors,
+# Copyright 2002-2005 The Apache Software Foundation or its licensors,
 # as applicable.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -26,7 +26,7 @@
 
 # Specifies name of Forrest skin to use
 #project.skin=tigris
-project.skin=pelt
+#project.skin=pelt
 
 # comma separated list, file:// is supported
 #forrest.skins.descriptors=http://forrest.apache.org/skins/skins.xml,file:///c:/myskins/skins.xml
@@ -106,4 +106,4 @@ project.skin=pelt
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
 # Run "forrest available-plugins" for a list of plug-ins currently available
-project.required.plugins=org.apache.forrest.plugin.view,org.apache.forrest.plugin.leather,org.apache.forrest.plugin.projectInfo,org.apache.forrest.plugin.pdf-output
+project.required.plugins=org.apache.forrest.plugin.viewHelper,org.apache.forrest.plugin.view,org.apache.forrest.plugin.projectInfo,org.apache.forrest.plugin.pdf-output
