--- a/forrest.properties
+++ b/forrest.properties
@@ -25,3 +25,7 @@ project.configfile=${project.home}/src/documentation/conf/cli.xconf
 
 project.bugtracking-url=http://issues.cocoondev.org/browse/
 project.issues-rss-url=http://issues.cocoondev.org/IssueNavigator.jspa?pid=10000&fixfor=10030&resolutionIds=-1&tempMax=25&view=rss&reset=true
+# The names of plugins that are required to build the project
+# comma separated list (no spaces)
+# Run "forrest available-plugins" for a list of plug-ins currently available
+project.required.plugins=org.apache.forrest.plugin.pdf-output,org.apache.forrest.plugin.projectInfo,org.apache.forrest.plugin.dtdx-input,wiki,org.apache.forrest.plugin.OpenOffice.org,org.apache.forrest.plugin.pod-output
